Resposniveness - Resolved footer overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,8 +111,8 @@ body {
 
 /* DOCTORS PAGE */
 .result-div {
-  width: 250px;
-  height: 300px;
+  max-width: 250px;
+  max-height: 300px;
 }
 
 .btn-doc-search {
